welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(flag=0){avance
          ^RunHalf:7: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
if(2 * Biscuit = co + 1){flag=flag+1}}
     ^