welcome.lessons.welcome.variables.RunHalf.scala.code
var flag=0
var Biscuit=0
var co=0
while(flag=0){avance
if (estSurBiscuit){Biscuit=Biscuit+1}
if (estSurOrange){co=co+1}
if(2 * Biscuit = co + 1){flag=flag+1}}
